--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -66,6 +66,7 @@ DEMO_OBJECTS=$(MAIN) $(DEMO) $(D_SCENE_M) $(D_SCENE) $(D_PLAYER) \
 	$(D_SCENE_P) $(D_PAUSE_TEXT) $(D_TITLE) $(D_PLAYER_S) \
 	$(D_PLAYER_S_MOVE) $(D_PLAYER_S_IDLE) $(D_PLAYER_A_IDLE) \
 	$(D_PLAYER_A_M) $(D_PLAYER_A_MOVE) $(D_PLAYER_A_PUNCH) \
+	$(D_PLAYER_S_PUNCH)
 
 TARGET=NISHIKIGOI_DEMO.out
 #$@ is a macro that refers to the target
