--- a/DEMO/GameObjects/Player/makefile.player_dictionary
+++ b/DEMO/GameObjects/Player/makefile.player_dictionary
@@ -16,10 +16,6 @@ D_PLAYER_CPP=./GameObjects/Player/Player.cpp
 D_PLAYER_H=./GameObjects/Player/Player.h
 D_PLAYER=$(FILE_OBJECTS_FOLDER)/Player.o
 
-D_PLAYER_A_M_CPP=./GameObjects/Player/PlayerAnimationManager.cpp
-D_PLAYER_A_M_H=./GameObjects/Player/PlayerAnimationManager.h
-D_PLAYER_A_M=$(FILE_OBJECTS_FOLDER)/PlayerAM.o
-
 D_PLAYER_S_CPP=./GameObjects/Player/States/PlayerState.cpp
 D_PLAYER_S_H=./GameObjects/Player/States/PlayerState.h
 D_PLAYER_S=$(FILE_OBJECTS_FOLDER)/PlayerS.o
@@ -31,6 +27,14 @@ D_PLAYER_S_MOVE=$(FILE_OBJECTS_FOLDER)/PlayerSMove.o
 D_PLAYER_S_IDLE_CPP=./GameObjects/Player/States/PlayerSIdle.cpp
 D_PLAYER_S_IDLE_H=./GameObjects/Player/States/PlayerSIdle.h
 D_PLAYER_S_IDLE=$(FILE_OBJECTS_FOLDER)/PlayerSIdle.o
+
+D_PLAYER_S_PUNCH_CPP=./GameObjects/Player/States/P_S_Punch.cpp
+D_PLAYER_S_PUNCH_H=./GameObjects/Player/States/P_S_Punch.h
+D_PLAYER_S_PUNCH=$(FILE_OBJECTS_FOLDER)/P_S_Punch.o
+
+D_PLAYER_A_M_CPP=./GameObjects/Player/PlayerAnimationManager.cpp
+D_PLAYER_A_M_H=./GameObjects/Player/PlayerAnimationManager.h
+D_PLAYER_A_M=$(FILE_OBJECTS_FOLDER)/PlayerAM.o
 
 D_PLAYER_A_IDLE_CPP=./GameObjects/Player/Animations/PlayerAIdle.cpp
 D_PLAYER_A_IDLE_H=./GameObjects/Player/Animations/PlayerAIdle.h
