--- a/DEMO/makefile
+++ b/DEMO/makefile
@@ -73,14 +73,14 @@ INCLUDE_FOLDERS:=$(INCLUDE_SOURCE_FOLDERS) $(INCLUDE_PAT_FOLDERS)
 #CCFLAGS+= $(PAT_LIB)
 
 
-DEBUG?=0
+DEBUG?=1
 ifeq ($(DEBUG),1)
-	COMPILER_FLAGS+= -DDEBUG_MODE -g
+	CCFLAGS+= -DDEBUG_MODE -g
 endif
 
 RELASE?=0
 ifeq ($(RELASE),1)
-	COMPILER_FLAGS+= -O3
+	CCFLAGS+= -O3
 endif
 
 
